--- a/loop.html
+++ b/loop.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Encode 
-    <script  src="script.js"></script>
+    <script src="loop.js"></script>
 </body>
 </html>
